--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
                 <h1>Ipad Mini Apple 16 Gb Wifi Led 7.9</h1>
                 
                 <div class="ch-g1-2">
-                    <div id="productGallery" class="ch-box-lite" style="max-width:300px"> 
+                    <div id="productGallery" class="ch-box-container" style="max-width:300px"> 
                         <figure id="gallery" class="product-gallery">
                             <img src="images/ipod.jpg" dat-fixed-img="images/ipod.jpg" alt="Ipod mini Apple" style="max-width:100%;max-height:100%">
                         </figure>   
@@ -87,22 +87,22 @@
                                 <div class="otherProductsCarousel">
                                     <ul>
                                         <li>
-                                            <img src="http://static.mlstatic.com/org-img/ch/ui/1.0.0/static/ninja.png">
+                                            <img src="images/ipod_thumb_1.jpg">
                                         </li>
                                         <li>
-                                            <img src="http://static.mlstatic.com/org-img/ch/ui/1.0.0/static/ninja.png">
+                                            <img src="images/ipod_thumb_2.jpg">
                                         </li>
                                         <li>
-                                            <img src="http://static.mlstatic.com/org-img/ch/ui/1.0.0/static/ninja.png">
+                                            <img src="images/ipod_thumb_3.jpg">
                                         </li>
                                         <li>
-                                            <img src="http://static.mlstatic.com/org-img/ch/ui/1.0.0/static/ninja.png">
+                                            <img src="images/ipod_thumb_2.jpg">
                                         </li>
                                         <li>
-                                            <img src="http://static.mlstatic.com/org-img/ch/ui/1.0.0/static/ninja.png">
+                                            <img src="images/ipod_thumb_1.jpg">
                                         </li>
                                         <li>
-                                            <img src="http://static.mlstatic.com/org-img/ch/ui/1.0.0/static/ninja.png">
+                                            <img src="images/ipod_thumb_3.jpg">
                                         </li>
                                     </ul>
                                 </div>
