--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,9 @@
                 <h1>Ipad Mini Apple 16 Gb Wifi Led 7.9</h1>
                 
                 <div class="ch-g1-2">
-                    <div id="productGallery" class="ch-box-container" style="max-width:300px"> 
+                    <div class="productGallery ch-box-container"> 
                         <figure id="gallery" class="product-gallery">
-                            <img src="images/ipod.jpg" dat-fixed-img="images/ipod.jpg" alt="Ipod mini Apple" style="max-width:100%;max-height:100%">
+                            <img src="images/ipod.jpg" dat-fixed-img="images/ipod.jpg" alt="Ipod mini Apple">
                         </figure>   
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                             <fieldset> 
                                 <p>
                                     <span class="label">Quantity</span>
-                                    <select name="comboInstallmentSelect" class="comboInstallmentSelect" id="comboInstallmentSelect">  
+                                    <select name="cmbQuantity">  
                                         <option value="1">1</option>
                                         <option value="2">2</option>
                                         <option value="3">3</option>
@@ -67,7 +67,7 @@
                                 </p>
                                 <p>
                                     <span class="label">Payments</span>
-                                    <select name="comboInstallmentSelect" class="comboInstallmentSelect" id="comboInstallmentSelect">  
+                                    <select name="cmbPayments">  
                                         <option value="3">3</option>
                                         <option value="6">6</option>
                                         <option value="9">9</option>
@@ -77,7 +77,7 @@
                             </fieldset>
                             <fieldset>
                                 <p class="submit">
-                                    <input type="button" class="ch-btn ch-btn-big" value="Buy" id="selectPayment">
+                                    <input type="button" class="ch-btn ch-btn-big" value="Buy" id="btnBuy">
                                 </p>
                                 <small>MercadoLibre isn't the owner of this product.</small>
                             </fieldset>
