--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
         <script></script>
         <meta charset="utf-8">
         <title>uxTest MercadoLibre</title>
-        <meta name="description" content="">
+        <meta name="description" content="Technical test to apply to a job of MercadoLibre">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
         
