--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css styles/vendor.css -->
         <!-- bower:css -->
-        <link rel="stylesheet" href="vendor/chico-ui/ui/chico.css" />
-        <link rel="stylesheet" href="vendor/chico-mesh/mesh.css" />
+        <link rel="stylesheet" href="styles/chico.css" />
+        <link rel="stylesheet" href="styles/mesh.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
@@ -33,8 +33,8 @@
                 
                 <div class="ch-g1-2">
                     <div class="productGallery ch-box-container"> 
-                        <figure id="gallery" class="product-gallery">
-                            <img src="images/ipod.jpg" alt="Ipod mini Apple">
+                        <figure id="gallery" role="gallery" class="product-gallery">
+                            <img src="images/ipod.jpg" alt="Foto de Ipod mini Apple">
                         </figure>   
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                             </fieldset>
                             <fieldset> 
                                 <p>
-                                    <span class="label">Quantity</span>
+                                    <label for="cmbQuantity">Quantity</label>
                                     <select name="cmbQuantity" id="cmbQuantity">  
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -66,7 +66,7 @@
                                     </select>
                                 </p>
                                 <p>
-                                    <span class="label">Payments</span>
+                                    <label for="cmbPayments">Payments</label>
                                     <select name="cmbPayments" id="cmbPayments">  
                                         <option value="3">3</option>
                                         <option value="6">6</option>
@@ -77,7 +77,8 @@
                             </fieldset>
                             <fieldset>
                                 <p class="submit">
-                                    <input type="button" class="ch-btn ch-btn-big" value="Buy" id="btnBuy">
+                                    <input type="button" class="ch-btn ch-btn-big" value="Buy" id="btnInitPurchase">
+                                    <div id="purchaseModal" class="hidden" aria-hidden="true"></div>
                                 </p>
                                 <small>MercadoLibre isn't the owner of this product.</small>
                             </fieldset>
@@ -88,22 +89,22 @@
                                     <div class="otherProductsCarousel">
                                         <ul>
                                             <li>
-                                                <img src="images/ipod_thumb_1.jpg" alt="Otro Ipod">
+                                                <img src="images/ipod_thumb_1.jpg" alt="Imagen de Ipod Azul">
                                             </li>
                                             <li>
-                                                <img src="images/ipod_thumb_2.jpg" alt="Otro Ipod">
+                                                <img src="images/ipod_thumb_2.jpg" alt="Imagen de Ipod Negro">
                                             </li>
                                             <li>
-                                                <img src="images/ipod_thumb_3.jpg" alt="Otro Ipod">
+                                                <img src="images/ipod_thumb_3.jpg" alt="Imagen de Ipod en distintos colores">
                                             </li>
                                             <li>
-                                                <img src="images/ipod_thumb_2.jpg" alt="Otro Ipod">
+                                                <img src="images/ipod_thumb_2.jpg" alt="Imagen de Ipod Negro">
                                             </li>
                                             <li>
-                                                <img src="images/ipod_thumb_1.jpg" alt="Otro Ipod">
+                                                <img src="images/ipod_thumb_1.jpg" alt="Imagen de Ipod Azul">
                                             </li>
                                             <li>
-                                                <img src="images/ipod_thumb_3.jpg" alt="Otro Ipod">
+                                                <img src="images/ipod_thumb_3.jpg" alt="Imagen de Ipod en distintos colores">
                                             </li>
                                         </ul>
                                     </div>
@@ -152,11 +153,12 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
-        <script src="vendor/chico-ui/ui/chico.js"></script>
+        <script src="scripts/chico.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/product.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
